syntax = "proto3";

option java_package = "org.example.qservice";

service QService {
  rpc Push(PushRequest) returns (PushResponse);
  rpc Peek(PeekRequest) returns (PeekResponse);
  rpc Pop(PopRequest) returns (PopResponse);
}

message Message {
  // Client-provided UUID for idempotency
  string message_id = 1;
  string payload = 2;
}

// Request to push a new message.
message PushRequest {
  string queue_name = 1;
  Message message = 2;
}
// Response for a push operation.
message PushResponse {
  bool success = 1; // On success
}

// Request to peek at a message.
message PeekRequest {
  string queue_name = 1;
  // Optional token for ensuring "at-least-once"
  string client_token = 2;
}
// Response for a peek operation.
message PeekResponse {
  Message message = 1;
  bool found = 2;
}

// Request to pop (commit) a message.
message PopRequest {
  string queue_name = 1;
  string message_id = 2; // The ID of the message to commit
}
// Response for a pop operation.
message PopResponse {
  bool success = 1; // On success
}

